--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section>
-        <img src="Imágenes/Imagen0037.jpg" alt="Títeres y Marionetas" width="200cm" height="200cm"> 
+        <img src="Imagen0037.jpg" alt="Títeres y Marionetas" width="200cm" height="200cm"> 
         
         <h2>¿Qué hacemos?</h2>
         <p>Somos apasionados por crear títeres y marionetas únicas con materiales de alta calidad y atención a los detalles.</p>
